[package]
name = "tls13tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0"
x25519-dalek = { version = "2", features = ["static_secrets"] }
pretty_assertions = "1.4.1"
log = "0.4.27"
env_logger = "0.11.7"
sha2 = "0.10.8"
hkdf = "0.12.4"
chacha20poly1305 = "0.10.1"
hmac = "0.12.1"
rasn-pkix = "0.26.2"
rasn = "0.26.2"
webpki = "0.22.4"
webpki-roots = "0.26.8"
time = { version = "0.3.41", features = ["parsing", "formatting"] }
chrono = "0.4.40"
ed25519-dalek = "2.1.1"

# Library target for fuzzing
[lib]
bench = false
